Edit icon, banner and wording

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -1,53 +1,53 @@
 /*
- * Google Analytics by WebKinder
+ * Google Analytics by WEBKINDER
  * Admin CSS Styles
  */
 
- #wk-google-analytics-settings>div {
- 	margin-bottom: 15px;
- }
+#wk-google-analytics-settings>div {
+	margin-bottom: 15px;
+}
 
- #mc_embed_signup .mc-field-group {
-   margin-bottom: 15px;
- }
+#mc_embed_signup .mc-field-group {
+	margin-bottom: 15px;
+}
 
- /*====================GRID=================*/
+/*====================GRID=================*/
 
 @media screen and (min-width: 768px) {
 
-  .wk-left-part,
-  .wk-right-part {
-    display: inline-block;
-  }
+	.wk-left-part,
+	.wk-right-part {
+		display: inline-block;
+	}
 
-  .wk-left-part {
-    width: 70%;
-    vertical-align: top;
-  }
+	.wk-left-part {
+		width: 70%;
+		vertical-align: top;
+	}
 
-  .wk-right-part {
-    width: 25%;
-    vertical-align:top;
-  }
+	.wk-right-part {
+		width: 25%;
+		vertical-align: top;
+	}
 
 }
 
 /*==============MAILCHIMP==================*/
 
 #mc_embed_signup .mc-field-group label {
-  width: 100px;
-  display: inline-block;
+	width: 100px;
+	display: inline-block;
 }
 
 #mc_embed_signup .mc-field-group {
-  margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 #mc_embed_signup .mc-field-group .asterisk {
-  margin-left: 5px;
-  color: red;
+	margin-left: 5px;
+	color: red;
 }
 
 #mc_embed_signup_scroll .input-group label {
-    width: 200px;
+	width: 200px;
 }
